<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NoviProizvodActivity">

    <TextView
        android:id="@+id/tvNazivProizvoda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/productName"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/etNazivProizvoda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNazivProizvoda"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/mascara"
        android:background="@drawable/border"
        android:padding="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSastojak"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/etNazivProizvoda"
        app:layout_constraintBottom_toTopOf="@+id/clKorak">
        <TextView
            android:id="@+id/tvSastojci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Ingridient"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"/>
        <EditText
            android:id="@+id/etSastojak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDodajSastojak"
            app:layout_constraintTop_toBottomOf="@+id/tvSastojci"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="8dp"
            android:hint="@string/ingr"
            android:background="@drawable/border"
            android:maxLines="1"/>
        <ImageButton
            android:id="@+id/btnDodajSastojak"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toEndOf="@+id/etSastojak"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSastojci"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_add"
            android:background="@drawable/circle_button"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSastojci"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/etSastojak"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:background="@drawable/border"
            android:scrollbars="vertical"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clKorak"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/clSastojak"
        app:layout_constraintBottom_toTopOf="@+id/btnSpremiProizvod">
        <TextView
            android:id="@+id/tvKoraci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etKorak"
            android:text="@string/Step"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/etKorak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDodajKorak"
            app:layout_constraintTop_toBottomOf="@+id/tvKoraci"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewKoraci"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/steps"
            android:background="@drawable/border"
            android:padding="8dp"
            android:maxLines="1"/>
        <ImageButton
            android:id="@+id/btnDodajKorak"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvKoraci"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_add"
            android:background="@drawable/circle_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewKoraci"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/etKorak"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:background="@drawable/border"
            android:scrollbars="vertical"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnSpremiProizvod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:text="@string/Save"
        android:background="@drawable/btn_save"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:elevation="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>