<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <com.alexzh.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:src="@mipmap/logo"
        app:view_borderWidth="2dp"
        app:view_borderColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/etUsernameReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:hint="@string/username"
        android:padding="15dp"
        android:background="@drawable/border"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etPassReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etUsernameReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:background="@drawable/border"/>

    <Button
        android:id="@+id/btnNewUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPassReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@drawable/btn_login"/>


</androidx.constraintlayout.widget.ConstraintLayout>