<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clEyebrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/border">
                <ImageView
                    android:id="@+id/imageViewEyebrow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_eyebrow_pencil"/>
                <TextView
                    android:id="@+id/tvEyebrow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewEyebrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="25dp"
                    android:textSize="30sp"
                    android:text="@string/eyebrow"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clEyeliner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/clEyebrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/border">
                <ImageView
                    android:id="@+id/imageViewEyeliner"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_eyeliner"/>
                <TextView
                    android:id="@+id/tvEyeliner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewEyeliner"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="25dp"
                    android:textSize="30sp"
                    android:text="@string/eyeliner"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clEyeshadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/clEyeliner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/border">
                <ImageView
                    android:id="@+id/imageViewEyeshadow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_eyeshadow"/>
                <TextView
                    android:id="@+id/tvEyeshadow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewEyeshadow"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="25dp"
                    android:textSize="30sp"
                    android:text="@string/eyeshadow"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMaskara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/clEyeshadow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/border">
                <ImageView
                    android:id="@+id/imageViewMaskara"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_mascara"/>
                <TextView
                    android:id="@+id/tvMaskara"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewMaskara"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="25dp"
                    android:textSize="30sp"
                    android:text="@string/mascara"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation"
        tools:layout_editor_absoluteX="84dp" />

</androidx.constraintlayout.widget.ConstraintLayout>